--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Simply Jahari</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Simply Jahari explores, streams, and creates—one bold idea at a time." />
+  <title>SimplyJahari</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="favicon.png" type="image/png" />
+  
+  
 </head>
-<body>
-  <h1>Welcome to Simply Jahari</h1>
-  <p>This space is getting a fresh start. Stay tuned!</p>
+
+<!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
+    crossorigin="anonymous"></script>
+
+    <body>
+
+  <header class="logo-header">
+    <img src="SimplyJahari\SimplyJaharilogo.png" alt="Simply Jahari Logo" class="site-logo" />
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#stream">Stream</a></li>
+      <li><a href="#create">Create</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <p>This is where I explore, stream, and create—one bold idea at a time.</p>
+
+    <h2>Contact Me</h2>
+    <p>Have questions, collaborations, or just want to say hello? Reach out!</p>
+    <p>📧 <a href="mailto:simplyjahari@proton.me">simplyjahari@proton.me</a></p>
+
+    <!-- YouTube Embed -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5N2_JAx-m0A?si=Zc7QrQJLbGiRCTLu"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>
+
+    <section id="about">
+      <h2>About</h2>
+      <p>Welcome! I explore, stream, and create—one bold idea at a time. Join me on my journey of creativity and discovery.</p>
+    </section>
+
+    <section id="stream">
+      <h2>Stream</h2>
+      <p>Catch my latest streams and live sessions. Stay tuned for updates and schedules!</p>
+    </section>
+
+    <section id="create">
+      <h2>Create</h2>
+      <p>From art to code, I love building and sharing new projects. Check out my latest creations here.</p>
+    </section>
+  </main>
+
+  <footer>
+  </footer>
+
 </body>
 </html>
