--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>SimplyJahari</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.png" type="image/png" />
-  
+  <style><link rel="stylesheet" href="styles.css"></style>
   
 </head>
 
