--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="stylesheet" href="styles.css">
-  
+  <section class="logo-section">
+  <img src="images/your-logo.png" alt="Simply Jahari Logo">
+</section>
 </head>
 
 <!-- Google AdSense -->
