--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="stylesheet" href="styles.css">
   <section class="logo-section">
-  <img src="images/your-logo.png" alt="Simply Jahari Logo">
+  <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo">
 </section>
 </head>
 
