--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Simply Jahari explores, streams, and creates—one bold idea at a time." />
+  <meta charset="UTF-8">
   <title>SimplyJahari</title>
-  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="favicon.png" type="image/png" />
-  <link rel="stylesheet" href="styles.css">
-  <section class="logo-section">
-  <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo">
-</section>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
+  
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866" crossorigin="anonymous"></script>
 </head>
 
-<!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
-    crossorigin="anonymous"></script>
-
-    <body>
-
+<body>
   <header class="logo-header">
-    <img src="SimplyJahari\SimplyJaharilogo.png" alt="Simply Jahari Logo" class="site-logo" />
+    <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo" class="site-logo" />
   </header>
 
+  <section class="logo-section">
+    <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo" />
+  </section>
+
   <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#stream">Stream</a></li>
+      <li><a href="#create">Create</a></li>
+    </ul>
+  </nav>
+
+  <!-- Rest of your page... -->
+</body>
+</html>
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#stream">Stream</a></li>
