--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
   <meta charset="UTF-8">
   <title>SimplyJahari</title>
   <link rel="icon" href="favicon.png" type="image/png" />
-
   <link rel="stylesheet" href="style.css" />
-  <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866" crossorigin="anonymous"></script>
-
-<img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo" />
 </head>
 
 <body>
+  <header class="logo-header">
+    <!-- Optional logo here too -->
+  </header>
+
+  <section class="logo-section">
+    <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo" />
+  </section>
+
+  <nav>
+    ...
+  </nav>
+</body>
   <header class="logo-header">
   
   </header>
