--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <title>SimplyJahari</title>
   <link rel="icon" href="favicon.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866" crossorigin="anonymous"></script>
 </head>
-
 <body>
   <header class="logo-header">
     <!-- Optional logo here too -->
@@ -18,24 +17,6 @@
   </section>
 
   <nav>
-    ...
-  </nav>
-</body>
-  <header class="logo-header">
-  
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#stream">Stream</a></li>
-      <li><a href="#create">Create</a></li>
-    </ul>
-  </nav>
-
-  <!-- Rest of your page... -->
-</body>
-</html>
     <ul>
       <li><a href="#about">About</a></li>
       <li><a href="#stream">Stream</a></li>
@@ -47,7 +28,7 @@
   <main>
     <p>This is where I explore, stream, and create—one bold idea at a time.</p>
 
-    <h2>Contact Me</h2>
+    <h2 id="contact">Contact Me</h2>
     <p>Have questions, collaborations, or just want to say hello? Reach out!</p>
     <p>📧 <a href="mailto:simplyjahari@proton.me">simplyjahari@proton.me</a></p>
 
@@ -74,7 +55,8 @@
   </main>
 
   <footer>
+    <!-- Footer content here -->
   </footer>
-<!-- Trigger GitHub Pages build -->
+  
 </body>
 </html>
