--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <header class="logo-header">
     <!-- Optional logo here too -->
   </header>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
+     crossorigin="anonymous"></script>
   <section class="logo-section">
     <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo" />
   </section>
