--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
  
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
+     crossorigin="anonymous"></script>
+  
 <body>
   <header class="logo-header">
     <!-- Optional logo here too -->
