--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="styles.css" />
  
 </head>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
-     crossorigin="anonymous"></script>
-  
+     crossorigin="anonymous"></script>  
 <body>
   <header class="logo-header">
     <!-- Optional logo here too -->
@@ -18,7 +18,22 @@
   <section class="logo-section">
     <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo" />
   </section>
+<section class="logo-section">
+  <img src="images/SimplyJaharilogo.png" alt="Simply Jahari Logo" />
+</section>
 
+<!-- Ad container below logo -->
+<div class="ad-container" style="margin: 20px auto; text-align: center;">
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6074449047732866"
+       data-ad-slot="YOUR_AD_SLOT"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
