--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 <!-- Ad container below logo -->
 <div class="ad-container" style="margin: 20px auto; text-align: center;">
   <ins class="adsbygoogle"
+    <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
        style="display:block"
        data-ad-client="ca-pub-6074449047732866"
-       data-ad-slot="YOUR_AD_SLOT"
+       data-ad-slot="6074449047732866"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
   <script>
