--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
   <title>SimplyJahari</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="stylesheet" href="styles.css" />
- 
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
+     crossorigin="anonymous"></script>
 </head>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
-     crossorigin="anonymous"></script>  
+  <section class="feature-ad">
+  <h2>🎮 GameFly - Video Game Rentals Delivered</h2>
+  <p>
+    <a href="https://www.tkqlhce.com/click-<pid>-10480547">
+      Pre-paid plans start at only $12!
+    </a>
+  </p>
+  <img src="https://www.tqlkg.com/image-<pid>-10480547" width="1" height="1" border="0" />
+</section>
+  
 <body>
   <header class="logo-header">
     <!-- Optional logo here too -->
