--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </p>
   <img src="https://www.tqlkg.com/image-<pid>-10480547" width="1" height="1" border="0" />
 </section>
-  
+</head>
 <body>
   <header class="logo-header">
     <!-- Optional logo here too -->
