--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <title>SimplyJahari</title>
   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="stylesheet" href="styles.css" />
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
-     crossorigin="anonymous"></script>
 </head>
+   
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6074449047732866"
+     crossorigin="anonymous"></script>
+  
+  <script src="https://gumroad.com/js/gumroad.js"></script>
+<a class="gumroad-button" href="https://jaharim4.gumroad.com/l/luurio">Buy on</a>
   <section class="feature-ad">
   <h2>🎮 GameFly - Video Game Rentals Delivered</h2>
   <p>
